chore: fix text alignment

--- a/styles/_forecast.scss
+++ b/styles/_forecast.scss
@@ -71,6 +71,7 @@
         @include breakpoint(phone, max) {
           font-size: 2.5rem;
         }
+        margin-top: 0;
         font-size: 3rem;
       }
     }
